<resources>
    <string name="app_name">YourPocketStorage</string>
    <string name="sidebar_open">Open</string>
    <string name="sidebar_close">Close</string>
    <string name="add_item">+ Add item</string>
    <string name="main_layout">Main Layout</string>
    <string name="browse_items">Browse items</string>
    <string name="add_new_item">Add new item</string>
    <string name="export_items">Export Items</string>
    <string name="menu">Menu</string>
    <string name="none">None</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="price">Price($) of each</string>
    <string name="overview_last">Overview last</string>
    <string name="clear_database">Clear Database</string>
    <string name="id">ID</string>
</resources>