<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_browse"
            android:icon="@mipmap/baseline_assignment_black_18"
            android:title="@string/browse_items"/>

        <item android:id="@+id/nav_add_item"
            android:icon="@mipmap/baseline_add_black_18"
            android:title="@string/add_new_item"/>

        <item android:id="@+id/nav_export"
            android:icon="@mipmap/baseline_file_upload_black_18"
            android:title="@string/export_items"/>
        <item android:id="@+id/nav_clear_database"
            android:icon="@drawable/ic_baseline_delete_forever_18"
            android:title="@string/clear_database"/>
    </group>
</menu>