<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_radial_control1"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="46sp"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:id="@+id/sign_in_view"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </TextView>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_edit"
        android:background="#30ffffff"
        android:layout_below="@id/sign_in_view"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="#70ffffff"
        android:layout_margin="40dp"
        android:padding="20dp"
        android:textSize="24sp"
        android:drawableStart="@drawable/ic_baseline_perm_identity_24">
    </EditText>

    <EditText
        android:id="@+id/userpassword_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edit"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#70ffffff"
        android:textSize="24sp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword">

    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_below="@+id/userpassword_edit"
        android:text="@string/login"
        android:textSize="20sp"
        android:backgroundTint="@color/teal_700"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_margin="20dp">

    </Button>

</RelativeLayout>
