<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddActivity"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/navigation_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </include>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Enter your data, please:"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="28sp"
            tools:ignore="RtlCompat"
            android:padding="10dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:textSize="16sp"
            android:textAlignment="center"
            android:background="@drawable/rounded_edit_text"
            android:layout_marginTop="15dp"
            android:id="@+id/item_name"
            >
        </EditText>

        <EditText
            android:inputType="number"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/amount"
            android:textSize="16sp"
            android:textAlignment="center"
            android:background="@drawable/rounded_edit_text"
            android:padding="15dp"
            android:layout_marginTop="45dp"
            android:id="@+id/item_amount"
            >
        </EditText>

        <EditText
            android:inputType="number"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/price"
            android:textSize="16sp"
            android:textAlignment="center"
            android:background="@drawable/rounded_edit_text"
            android:padding="15dp"
            android:layout_marginTop="45dp"
            android:id="@+id/item_price"
            >
        </EditText>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:text="@string/add_item"
            android:layout_gravity="center"
            android:id="@+id/add_btn"
            android:background="@drawable/round_button">
        </Button>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/overview_last"
            android:layout_gravity="center"
            android:id="@+id/overview_last_btn"
            android:background="@drawable/round_button">
        </Button>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        android:id="@+id/nav_view">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>